--- a/index.html
+++ b/index.html
@@ -14,31 +14,22 @@
             <p>A sanctuary for your soul</p>
         </header>
         <main>
-            <section class="input-section">
-                <h2>Share Your Light</h2>
-                <form id="healing-form">
-                    <div class="form-group">
-                        <label for="paragraph">Your Healing Words</label>
-                        <textarea id="paragraph" rows="5" placeholder="Write a paragraph to share your thoughts or find peace..."></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="url">Inspirational Link</label>
-                        <input type="url" id="url" placeholder="Enter a URL to a healing resource">
-                        <input type="text" id="keyword" placeholder="Enter a keyword for this link">
-                    </div>
-                    <button type="submit">Add to Haven</button>
-                </form>
-            </section>
             <section class="content-section">
                 <h2>Your Sanctuary</h2>
-                <div id="paragraph-display"></div>
-                <ul id="url-list"></ul>
+                <div id="paragraph-display">
+                    <p>In the quiet of your heart, find peace. Let the weight of your pain dissolve in the gentle embrace of hope. You are not alone; this space is for you to rest, reflect, and heal. May these words guide you toward light.</p>
+                </div>
+                <h3>Inspirational Resources</h3>
+                <ul id="url-list">
+                    <li><a href="https://www.calm.com" target="_blank">Calm: Meditation and Sleep</a> <!-- Keyword: meditation --></li>
+                    <li><a href="https://www.headspace.com" target="_blank">Headspace: Guided Mindfulness</a> <!-- Keyword: mindfulness --></li>
+                    <li><a href="https://www.mindful.org" target="_blank">Mindful: Daily Practices</a> <!-- Keyword: healing --></li>
+                </ul>
             </section>
         </main>
         <footer>
-            <p>Created with love for those seeking peace &copy; 2025</p>
+            <p>Created with love for those seeking peace © 2025</p>
         </footer>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
