--- a/index.html
+++ b/index.html
@@ -3,32 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Healing Haven</title>
+    <title>Al-Shifa: A Sanctuary for the Heart</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Healing Haven</h1>
-            <p>A sanctuary for your soul</p>
+            <h1>Al-Shifa: A Sanctuary for the Heart</h1>
+            <p>“Verily, with hardship comes ease” (Quran 94:6)</p>
         </header>
         <main>
             <section class="content-section">
-                <h2>Your Sanctuary</h2>
+                <h2>Your Path to Healing</h2>
                 <div id="paragraph-display">
-                    <p>In the quiet of your heart, find peace. Let the weight of your pain dissolve in the gentle embrace of hope. You are not alone; this space is for you to rest, reflect, and heal. May these words guide you toward light.</p>
+                    <p>O soul in pain, turn to Allah, for He is the Healer of hearts. In your trials, seek His mercy, for “Indeed, Allah is with the patient” (Quran 2:153). Let your heart find solace in His remembrance, for in His truth lies your salvation. You are not alone; this sanctuary is a place of hope, patience, and light.</p>
                 </div>
-                <h3>Inspirational Resources</h3>
+                <h3>Resources for Solace</h3>
                 <ul id="url-list">
-                    <li><a href="https://www.calm.com" target="_blank">Calm: Meditation and Sleep</a> <!-- Keyword: meditation --></li>
-                    <li><a href="https://www.headspace.com" target="_blank">Headspace: Guided Mindfulness</a> <!-- Keyword: mindfulness --></li>
-                    <li><a href="https://www.mindful.org" target="_blank">Mindful: Daily Practices</a> <!-- Keyword: healing --></li>
+                    <!-- Add your links here, e.g.:
+                    <li><a href="https://your-link.com" target="_blank">Your Link Text</a> <!-- Keyword: your-keyword --></li>
+                    -->
                 </ul>
             </section>
         </main>
         <footer>
-            <p>Created with love for those seeking peace © 2025</p>
+            <p>Created with dua for those seeking Allah’s mercy © 2025</p>
         </footer>
     </div>
 </body>
