--- a/index.html
+++ b/index.html
@@ -3,33 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Al-Shifa: A Sanctuary for the Heart</title>
+    <title>Al-Rahma: Healing Hearts</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Lato:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="hero">
+        <div class="hero-content">
+            <h1>Al-Rahma: Healing Hearts</h1>
+            <p>“Indeed, in the remembrance of Allah do hearts find rest” (Quran 13:28)</p>
+        </div>
+    </div>
     <div class="container">
-        <header>
-            <h1>Al-Shifa: A Sanctuary for the Heart</h1>
-            <p>“Verily, with hardship comes ease” (Quran 94:6)</p>
-        </header>
-        <main>
-            <section class="content-section">
-                <h2>Your Path to Healing</h2>
-                <div id="paragraph-display">
-                    <p>O soul in pain, turn to Allah, for He is the Healer of hearts. In your trials, seek His mercy, for “Indeed, Allah is with the patient” (Quran 2:153). Let your heart find solace in His remembrance, for in His truth lies your salvation. You are not alone; this sanctuary is a place of hope, patience, and light.</p>
-                </div>
-                <h3>Resources for Solace</h3>
-                <ul id="url-list">
-                    <!-- Add your links here, e.g.:
-                    <li><a href="https://your-link.com" target="_blank">Your Link Text</a> <!-- Keyword: your-keyword --></li>
-                    -->
-                </ul>
-            </section>
-        </main>
+        <section class="content-section">
+            <h2>A Sanctuary for Your Soul</h2>
+            <div class="card">
+                <p>In the depths of your pain, O weary heart, turn to Allah, the Most Merciful. “When My servants ask you about Me, indeed I am near” (Quran 2:186). Your struggles are seen, and your tears are known. Find solace in His infinite mercy, patience in His trials, and salvation in His truth. This sanctuary offers you peace and guidance through faith.</p>
+            </div>
+            <h3>Resources for Peace</h3>
+            <ul class="resource-list">
+                <!-- Add your links here, e.g.:
+                <li><a href="https://your-link.com" target="_blank">Your Link Text</a> <!-- Keyword: your-keyword --></li>
+                -->
+            </ul>
+        </section>
         <footer>
-            <p>Created with dua for those seeking Allah’s mercy © 2025</p>
+            <p>Created with dua for those seeking Allah’s healing © 2025</p>
+            <p class="visitor-counter"> <span id="visitor-count">0</span> hearts have found solace here</p>
         </footer>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
