--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Al-Rahma: Healing Hearts</title>
+    <title>Al-Noor: Sanctuary of the Heart</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Lato:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Inter:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="hero">
+        <div class="hero-overlay"></div>
         <div class="hero-content">
-            <h1>Al-Rahma: Healing Hearts</h1>
+            <h1>Al-Noor: Sanctuary of the Heart</h1>
             <p>“Indeed, in the remembrance of Allah do hearts find rest” (Quran 13:28)</p>
         </div>
     </div>
     <div class="container">
         <section class="content-section">
-            <h2>A Sanctuary for Your Soul</h2>
+            <h2>A Haven for Your Soul</h2>
             <div class="card">
-                <p>In the depths of your pain, O weary heart, turn to Allah, the Most Merciful. “When My servants ask you about Me, indeed I am near” (Quran 2:186). Your struggles are seen, and your tears are known. Find solace in His infinite mercy, patience in His trials, and salvation in His truth. This sanctuary offers you peace and guidance through faith.</p>
+                <p>O heart weighed by sorrow, find refuge in Allah’s boundless mercy. “When My servants ask you about Me, indeed I am near” (Quran 2:186). Your pain is known, your tears are seen, and your soul is cherished. In this sanctuary, let the light of faith guide you to peace, patience, and salvation. Trust in Allah, for He is Al-Shafi, the Healer of all wounds.</p>
             </div>
-            <h3>Resources for Peace</h3>
+            <h3>Guiding Lights</h3>
             <ul class="resource-list">
                 <!-- Add your links here, e.g.:
                 <li><a href="https://your-link.com" target="_blank">Your Link Text</a> <!-- Keyword: your-keyword --></li>
@@ -28,8 +29,8 @@
             </ul>
         </section>
         <footer>
-            <p>Created with dua for those seeking Allah’s healing © 2025</p>
-            <p class="visitor-counter"> <span id="visitor-count">0</span> hearts have found solace here</p>
+            <p>Created with dua for those seeking Allah’s light © 2025</p>
+            <p class="visitor-counter"><span id="visitor-count">0</span> hearts have found solace here</p>
         </footer>
     </div>
     <script src="script.js"></script>
