--- a/index.html
+++ b/index.html
@@ -4,8 +4,231 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Al-Noor: Sanctuary of the Heart</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Inter:wght@300;400&display=swap" rel="stylesheet">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Inter', sans-serif;
+            background: #2a6349; /* Solid green background */
+            color: #1a3c34;
+            line-height: 1.7;
+            min-height: 100vh;
+            position: relative;
+            overflow-x: hidden;
+        }
+
+        body::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('https://www.transparenttextures.com/patterns/arabesque.png');
+            opacity: 0.15;
+            z-index: -2;
+            animation: patternPulse 20s infinite ease-in-out;
+        }
+
+        .hero {
+            background: linear-gradient(135deg, rgba(42, 99, 73, 0.7), rgba(212, 163, 115, 0.5)); /* Adjusted for green theme */
+            background-size: cover;
+            background-position: center;
+            height: 500px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            position: relative;
+            z-index: 1;
+        }
+
+        .hero-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(135deg, rgba(42, 99, 73, 0.4), rgba(212, 163, 115, 0.3));
+            z-index: -1;
+            animation: gradientShift 15s infinite ease-in-out;
+        }
+
+        .hero-content {
+            max-width: 900px;
+            padding: 2rem;
+            animation: fadeInUp 1.5s ease-in;
+        }
+
+        h1 {
+            font-family: 'Amiri', serif;
+            font-size: 4rem;
+            color: #fff;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+            margin-bottom: 0.7rem;
+        }
+
+        .hero p {
+            font-family: 'Amiri', serif;
+            font-size: 1.8rem;
+            color: #f7e7e1;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+        }
+
+        .container {
+            max-width: 1000px;
+            margin: 3rem auto;
+            padding: 0 2rem;
+        }
+
+        .content-section {
+            background: rgba(255, 255, 255, 0.92);
+            border-radius: 25px;
+            padding: 3rem;
+            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.15);
+            border: 2px solid rgba(212, 163, 115, 0.5);
+            backdrop-filter: blur(10px);
+            animation: fadeIn 1.5s ease-in;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .content-section::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(circle, rgba(212, 163, 115, 0.1), transparent);
+            opacity: 0.3;
+            transform: rotate(45deg);
+            z-index: -1;
+        }
+
+        h2 {
+            font-family: 'Amiri', serif;
+            font-size: 2.5rem;
+            color: #2a6349;
+            margin-bottom: 2rem;
+            text-align: center;
+        }
+
+        h3 {
+            font-family: 'Amiri', serif;
+            font-size: 1.8rem;
+            color: #2a6349;
+            margin-bottom: 1.5rem;
+        }
+
+        .card {
+            background: rgba(247, 231, 225, 0.4); /* Dusty pink for warmth */
+            padding: 2rem;
+            border-radius: 15px;
+            border: 1px solid rgba(212, 163, 115, 0.3);
+            margin-bottom: 2rem;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.15);
+        }
+
+        .card p {
+            font-family: 'Amiri', serif;
+            font-size: 1.3rem;
+            color: #34495e;
+            line-height: 1.9;
+        }
+
+        .resource-list {
+            list-style: none;
+            padding: 0;
+        }
+
+        .resource-list li {
+            margin-bottom: 1rem;
+        }
+
+        .resource-list a {
+            color: #2a6349;
+            text-decoration: none;
+            font-size: 1.2rem;
+            font-family: 'Inter', sans-serif;
+            transition: color 0.3s ease, transform 0.3s ease;
+        }
+
+        .resource-list a:hover {
+            color: #d4a373;
+            transform: translateX(8px);
+        }
+
+        footer {
+            text-align: center;
+            margin: 3rem 0;
+            font-size: 1rem;
+            color: #5a5a5a;
+        }
+
+        .visitor-counter {
+            margin-top: 0.7rem;
+            font-family: 'Amiri', serif;
+            font-size: 1.2rem;
+            color: #2a6349;
+        }
+
+        #visitor-count {
+            font-weight: 700;
+            color: #d4a373;
+            animation: pulseCount 2s infinite ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(40px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        @keyframes gradientShift {
+            0% { background: linear-gradient(135deg, rgba(42, 99, 73, 0.4), rgba(212, 163, 115, 0.3)); }
+            50% { background: linear-gradient(135deg, rgba(212, 163, 115, 0.3), rgba(42, 99, 73, 0.4)); }
+            100% { background: linear-gradient(135deg, rgba(42, 99, 73, 0.4), rgba(212, 163, 115, 0.3)); }
+        }
+
+        @keyframes patternPulse {
+            0% { opacity: 0.15; }
+            50% { opacity: 0.25; }
+            100% { opacity: 0.15; }
+        }
+
+        @keyframes pulseCount {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.1); }
+            100% { transform: scale(1); }
+        }
+
+        @media (max-width: 600px) {
+            .hero { height: 350px; }
+            h1 { font-size: 2.8rem; }
+            .hero p { font-size: 1.4rem; }
+            .container { padding: 0 1.2rem; }
+            .content-section { padding: 2rem; }
+            h2 { font-size: 2rem; }
+            h3 { font-size: 1.5rem; }
+            .card p { font-size: 1.2rem; }
+            .visitor-counter { font-size: 1.1rem; }
+        }
+    </style>
 </head>
 <body>
     <div class="hero">
@@ -33,6 +256,18 @@
             <p class="visitor-counter"><span id="visitor-count">0</span> hearts have found solace here</p>
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script>
+        // Ensure green background and local visitor counter
+        document.addEventListener('DOMContentLoaded', function() {
+            // Set background color dynamically
+            document.body.style.background = '#2a6349';
+            
+            // Local visitor counter (increments per page load in a session)
+            let visitorCount = sessionStorage.getItem('visitorCount') || 0;
+            visitorCount = parseInt(visitorCount) + 1;
+            sessionStorage.setItem('visitorCount', visitorCount);
+            document.getElementById('visitor-count').textContent = visitorCount;
+        });
+    </script>
 </body>
 </html>
