--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
 
         .hero {
-            background: linear-gradient(135deg, rgba(42, 99, 73, 0.7), rgba(212, 163, 115, 0.5)); /* Adjusted for green theme */
+            background: linear-gradient(135deg, rgba(42, 99, 73, 0.7), rgba(212, 163, 115, 0.5));
             background-size: cover;
             background-position: center;
             height: 500px;
@@ -126,7 +126,7 @@
         }
 
         .card {
-            background: rgba(247, 231, 225, 0.4); /* Dusty pink for warmth */
+            background: rgba(247, 231, 225, 0.4);
             padding: 2rem;
             border-radius: 15px;
             border: 1px solid rgba(212, 163, 115, 0.3);
@@ -140,11 +140,19 @@
             box-shadow: 0 15px 40px rgba(0, 0, 0, 0.15);
         }
 
+        .card h4 {
+            font-family: 'Amiri', serif;
+            font-size: 1.6rem;
+            color: #2a6349;
+            margin: 1.5rem 0 1rem;
+        }
+
         .card p {
             font-family: 'Amiri', serif;
             font-size: 1.3rem;
             color: #34495e;
             line-height: 1.9;
+            margin-bottom: 1rem;
         }
 
         .resource-list {
@@ -225,6 +233,7 @@
             .content-section { padding: 2rem; }
             h2 { font-size: 2rem; }
             h3 { font-size: 1.5rem; }
+            .card h4 { font-size: 1.4rem; }
             .card p { font-size: 1.2rem; }
             .visitor-counter { font-size: 1.1rem; }
         }
@@ -242,7 +251,15 @@
         <section class="content-section">
             <h2>A Haven for Your Soul</h2>
             <div class="card">
-                <p>O heart weighed by sorrow, find refuge in Allah’s boundless mercy. “When My servants ask you about Me, indeed I am near” (Quran 2:186). Your pain is known, your tears are seen, and your soul is cherished. In this sanctuary, let the light of faith guide you to peace, patience, and salvation. Trust in Allah, for He is Al-Shafi, the Healer of all wounds.</p>
+                <h4>The Unseen Hands of Mercy</h4>
+                <p>When a heart shatters, it feels as though the world has dimmed, and light may never again pierce the encroaching shadows. Yet, it is precisely in these moments of profound vulnerability that Allah's grace manifests most beautifully. He doesn't always heal us with a sudden, miraculous erasure of pain. Often, His healing comes through the unseen hands of kindness—the comfort offered by a loyal friend, the wise counsel of a family elder, or the unexpected empathy of a stranger. These are not mere coincidences; they are conduits of Divine love, sent to guide us back to wholeness.</p>
+                <p>Consider the gentle words of the Quran, a sacred scripture that resonates with promises of peace and resilience. Verses remind us that with every hardship, there is ease, a testament to Allah's unwavering presence. He provides strength when our own seems to falter, whispering patience into our souls and resilience into our spirits.</p>
+                <h4>Finding Solace in Remembrance</h4>
+                <p>One of the most potent forms of healing Allah bestows is the gift of remembrance (Dhikr). When our hearts are heavy, turning to Him in prayer, reflection, or supplication can be like finding an oasis in a parched desert. The very act of acknowledging His greatness and surrendering our pain to His will brings an incredible lightness. It's in this surrender that we realize we are not alone in our suffering; we are cradled in the vastness of His love.</p>
+                <p>Sometimes, healing manifests in the wisdom we gain from our trials. The very experiences that break us can also build us anew, forging a stronger, more compassionate self. Allah, in His infinite wisdom, allows these experiences not to punish, but to purify and elevate us. He sends insights, often through quiet introspection or the words of spiritual guides, that help us reframe our pain into purpose.</p>
+                <h4>The Dawn After the Darkness</h4>
+                <p>Healing is rarely a linear path; it's a journey of gentle steps forward, sometimes a few steps back, but always with the promise of a dawn after the longest night. Allah's healing is a continuous unfolding, a testament to His infinite patience and endless love. He orchestrates circumstances, touches hearts, and inspires actions that collectively weave a tapestry of recovery.</p>
+                <p>Ultimately, the most profound healing Allah offers is the mending of our connection with Him. In our brokenness, we are often drawn closer to our Creator, seeking solace and strength where worldly remedies fall short. And in that renewed connection, we find not just comfort for a shattered heart, but a profound and lasting peace that transcends all earthly sorrow. It's a beautiful, soul-deep healing, made possible through the endless compassion of the Divine.</p>
             </div>
             <h3>Guiding Lights</h3>
             <ul class="resource-list">
