--- a/index.html
+++ b/index.html
@@ -161,22 +161,6 @@
             margin: 1rem 0;
         }
 
-        .add-content-link {
-            display: inline-block;
-            margin: 1rem 0;
-            padding: 0.8rem 1.5rem;
-            background: #2a6349;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 5px;
-            font-family: 'Inter', sans-serif;
-            transition: background 0.3s ease;
-        }
-
-        .add-content-link:hover {
-            background: #d4a373;
-        }
-
         .resource-list {
             list-style: none;
             padding: 0;
@@ -230,8 +214,7 @@
         }
 
         @keyframes gradientShift {
-            0% { background: linear-gradien
-t(135deg, rgba(42, 99, 73, 0.4), rgba(212, 163, 115, 0.3)); }
+            0% { background: linear-gradient(135deg, rgba(42, 99, 73, 0.4), rgba(212, 163, 115, 0.3)); }
             50% { background: linear-gradient(135deg, rgba(212, 163, 115, 0.3), rgba(42, 99, 73, 0.4)); }
             100% { background: linear-gradient(135deg, rgba(42, 99, 73, 0.4), rgba(212, 163, 115, 0.3)); }
         }
@@ -273,7 +256,6 @@ t(135deg, rgba(42, 99, 73, 0.4), rgba(212, 163, 115, 0.3)); }
     <div class="container">
         <section class="content-section">
             <h2>A Haven for Your Soul</h2>
-            <a href="add-content.html" class="add-content-link">Add New Article</a>
             <div id="articles">
                 <!-- Default article -->
                 <div class="card">
