--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: 'Inter', sans-serif;
-            background: #2a6349;
+            background: linear-gradient(135deg, #2a6349 0%, #1a535c 100%);
             color: #1a3c34;
             line-height: 1.7;
             min-height: 100vh;
@@ -21,30 +21,30 @@
             overflow-x: hidden;
         }
 
+        /* Leaf-patterned background */
         body::before {
             content: '';
-            position: absolute;
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('https://www.transparenttextures.com/patterns/arabesque.png');
-            opacity: 0.15;
+            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" opacity="0.1"><path d="M50 10c-10 0-18 8-18 18s8 18 18 18c5 0 9.5-2 12.7-5.3C68 46 75 48 82 48c10 0 18-8 18-18s-8-18-18-18c-7 0-14 2-19.3 7.3C59.5 12 55 10 50 10z" fill="%23d4a373"/><path d="M20 50c-10 0-18 8-18 18s8 18 18 18c5 0 9.5-2 12.7-5.3C38 86 45 88 52 88c10 0 18-8 18-18s-8-18-18-18c-7 0-14 2-19.3 7.3C29.5 52 25 50 20 50z" fill="%23e6e1f5"/></svg>') repeat;
+            opacity: 0.12;
             z-index: -2;
-            animation: patternPulse 20s infinite ease-in-out;
+            animation: leafFloat 30s infinite linear;
         }
 
         .hero {
-            background: linear-gradient(135deg, rgba(42, 99, 73, 0.7), rgba(212, 163, 115, 0.5));
-            background-size: cover;
-            background-position: center;
-            height: 500px;
+            background: linear-gradient(135deg, rgba(42, 99, 73, 0.8), rgba(212, 163, 115, 0.6));
+            height: 600px;
             display: flex;
             justify-content: center;
             align-items: center;
             text-align: center;
             position: relative;
             z-index: 1;
+            overflow: hidden;
         }
 
         .hero-overlay {
@@ -53,117 +53,109 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(135deg, rgba(42, 99, 73, 0.4), rgba(212, 163, 115, 0.3));
+            background: radial-gradient(circle at center, rgba(230, 225, 245, 0.3), rgba(42, 99, 73, 0.5));
             z-index: -1;
-            animation: gradientShift 15s infinite ease-in-out;
+            animation: gradientPulse 20s infinite ease-in-out;
         }
 
         .hero-content {
-            max-width: 900px;
+            max-width: 1000px;
             padding: 2rem;
-            animation: fadeInUp 1.5s ease-in;
+            animation: fadeInUp 1.8s ease-out;
         }
 
         h1 {
             font-family: 'Amiri', serif;
-            font-size: 4rem;
-            color: #fff;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-            margin-bottom: 0.7rem;
+            font-size: 4.5rem;
+            color: #f7e7e1;
+            text-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+            margin-bottom: 1rem;
+            letter-spacing: 1px;
         }
 
         .hero p {
             font-family: 'Amiri', serif;
-            font-size: 1.8rem;
-            color: #f7e7e1;
-            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+            font-size: 2rem;
+            color: #d4a373;
+            text-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
         }
 
         .container {
-            max-width: 1000px;
-            margin: 3rem auto;
+            max-width: 1200px;
+            margin: 4rem auto;
             padding: 0 2rem;
         }
 
         .content-section {
-            background: rgba(255, 255, 255, 0.92);
-            border-radius: 25px;
-            padding: 3rem;
-            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.15);
-            border: 2px solid rgba(212, 163, 115, 0.5);
-            backdrop-filter: blur(10px);
-            animation: fadeIn 1.5s ease-in;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .content-section::before {
-            content: '';
-            position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: radial-gradient(circle, rgba(212, 163, 115, 0.1), transparent);
-            opacity: 0.3;
-            transform: rotate(45deg);
-            z-index: -1;
+            background: rgba(255, 255, 255, 0.95);
+            border-radius: 20px;
+            padding: 4rem;
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2), inset 0 0 10px rgba(212, 163, 115, 0.3);
+            backdrop-filter: blur(12px);
+            animation: fadeIn 2s ease-out;
         }
 
         h2 {
             font-family: 'Amiri', serif;
-            font-size: 2.5rem;
+            font-size: 3rem;
             color: #2a6349;
-            margin-bottom: 2rem;
+            margin-bottom: 3rem;
             text-align: center;
+            text-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
-        h3 {
-            font-family: 'Amiri', serif;
-            font-size: 1.8rem;
-            color: #2a6349;
-            margin-bottom: 1.5rem;
+        .articles-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+            margin-bottom: 3rem;
         }
 
         .card {
-            background: rgba(247, 231, 225, 0.4);
+            background: linear-gradient(145deg, #f7e7e1, #e6e1f5);
             padding: 2rem;
             border-radius: 15px;
-            border: 1px solid rgba(212, 163, 115, 0.3);
-            margin-bottom: 2rem;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1), -5px -5px 15px rgba(255, 255, 255, 0.7);
+            transition: transform 0.4s ease, box-shadow 0.4s ease;
+            overflow: hidden;
+            position: relative;
+            cursor: pointer;
         }
 
         .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.15);
+            transform: translateY(-10px) scale(1.02);
+            box-shadow: 8px 8px 20px rgba(0, 0, 0, 0.15), -8px -8px 20px rgba(255, 255, 255, 0.8);
         }
 
         .card h4 {
             font-family: 'Amiri', serif;
-            font-size: 1.6rem;
+            font-size: 1.8rem;
             color: #2a6349;
-            margin: 1.5rem 0 1rem;
+            margin-bottom: 1rem;
+            text-align: center;
         }
 
         .card p {
-            font-family: 'Amiri', serif;
-            font-size: 1.3rem;
+            font-family: 'Inter', sans-serif;
+            font-size: 1.1rem;
             color: #34495e;
-            line-height: 1.9;
+            line-height: 1.8;
             margin-bottom: 1rem;
+            max-height: 200px;
+            overflow-y: auto;
         }
 
         .card video {
             max-width: 100%;
             border-radius: 10px;
             margin: 1rem 0;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
 
         .resource-list {
             list-style: none;
             padding: 0;
+            text-align: center;
         }
 
         .resource-list li {
@@ -171,7 +163,7 @@
         }
 
         .resource-list a {
-            color: #2a6349;
+            color: #1a535c;
             text-decoration: none;
             font-size: 1.2rem;
             font-family: 'Inter', sans-serif;
@@ -180,68 +172,74 @@
 
         .resource-list a:hover {
             color: #d4a373;
-            transform: translateX(8px);
+            transform: translateX(5px);
         }
 
         footer {
             text-align: center;
-            margin: 3rem 0;
-            font-size: 1rem;
+            margin: 4rem 0;
+            font-size: 1.1rem;
             color: #5a5a5a;
         }
 
         .visitor-counter {
-            margin-top: 0.7rem;
+            margin-top: 1rem;
             font-family: 'Amiri', serif;
-            font-size: 1.2rem;
+            font-size: 1.3rem;
             color: #2a6349;
         }
 
         #visitor-count {
             font-weight: 700;
             color: #d4a373;
-            animation: pulseCount 2s infinite ease-in-out;
+            animation: pulseCount 2.5s infinite ease-in-out;
         }
 
         @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(40px); }
+            from { opacity: 0; transform: translateY(50px); }
             to { opacity: 1; transform: translateY(0); }
         }
 
         @keyframes fadeInUp {
-            from { opacity: 0; transform: translateY(20px); }
+            from { opacity: 0; transform: translateY(30px); }
             to { opacity: 1; transform: translateY(0); }
         }
 
-        @keyframes gradientShift {
-            0% { background: linear-gradient(135deg, rgba(42, 99, 73, 0.4), rgba(212, 163, 115, 0.3)); }
-            50% { background: linear-gradient(135deg, rgba(212, 163, 115, 0.3), rgba(42, 99, 73, 0.4)); }
-            100% { background: linear-gradient(135deg, rgba(42, 99, 73, 0.4), rgba(212, 163, 115, 0.3)); }
+        @keyframes gradientPulse {
+            0% { background: radial-gradient(circle at center, rgba(230, 225, 245, 0.3), rgba(42, 99, 73, 0.5)); }
+            50% { background: radial-gradient(circle at center, rgba(42, 99, 73, 0.5), rgba(230, 225, 245, 0.3)); }
+            100% { background: radial-gradient(circle at center, rgba(230, 225, 245, 0.3), rgba(42, 99, 73, 0.5)); }
         }
 
-        @keyframes patternPulse {
-            0% { opacity: 0.15; }
-            50% { opacity: 0.25; }
-            100% { opacity: 0.15; }
+        @keyframes leafFloat {
+            0% { background-position: 0 0; }
+            100% { background-position: 100px 100px; }
         }
 
         @keyframes pulseCount {
             0% { transform: scale(1); }
-            50% { transform: scale(1.1); }
+            50% { transform: scale(1.15); }
             100% { transform: scale(1); }
         }
 
-        @media (max-width: 600px) {
-            .hero { height: 350px; }
-            h1 { font-size: 2.8rem; }
-            .hero p { font-size: 1.4rem; }
-            .container { padding: 0 1.2rem; }
+        @media (max-width: 768px) {
+            .hero { height: 400px; }
+            h1 { font-size: 3rem; }
+            .hero p { font-size: 1.5rem; }
+            .container { padding: 0 1.5rem; }
+            .content-section { padding: 2.5rem; }
+            h2 { font-size: 2.2rem; }
+            .articles-grid { grid-template-columns: 1fr; }
+            .card h4 { font-size: 1.6rem; }
+            .card p { font-size: 1rem; }
+            .visitor-counter { font-size: 1.2rem; }
+        }
+
+        @media (max-width: 480px) {
+            h1 { font-size: 2.5rem; }
+            .hero p { font-size: 1.3rem; }
             .content-section { padding: 2rem; }
-            h2 { font-size: 2rem; }
-            h3 { font-size: 1.5rem; }
-            .card h4 { font-size: 1.4rem; }
-            .card p { font-size: 1.2rem; }
-            .visitor-counter { font-size: 1.1rem; }
+            h2 { font-size: 1.8rem; }
         }
     </style>
 </head>
@@ -256,7 +254,7 @@
     <div class="container">
         <section class="content-section">
             <h2>A Haven for Your Soul</h2>
-            <div id="articles">
+            <div class="articles-grid" id="articles">
                 <!-- Default article -->
                 <div class="card">
                     <h4>The Unseen Hands of Mercy</h4>
@@ -287,7 +285,7 @@
         // Ensure green background and local visitor counter
         document.addEventListener('DOMContentLoaded', function() {
             // Set background color
-            document.body.style.background = '#2a6349';
+            document.body.style.background = 'linear-gradient(135deg, #2a6349 0%, #1a535c 100%)';
             
             // Local visitor counter
             let visitorCount = sessionStorage.getItem('visitorCount') || 0;
