--- a/add-content.html
+++ b/add-content.html
@@ -197,7 +197,7 @@
         // Password check
         function checkPassword() {
             const password = document.getElementById('password').value;
-            const correctPassword = 'yourSecretPassword'; // Replace with your secure password
+            const correctPassword = 'asdmen50sana'; // Replace with your secure password
             if (password === correctPassword) {
                 document.getElementById('password-form').style.display = 'none';
                 document.getElementById('content-form').style.display = 'block';
