--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             font-family: 'Inter', sans-serif;
             background: linear-gradient(135deg, #2a6349 0%, #1a535c 100%);
             color: #1a3c34;
-            line-height: 1.7;
+            line-height: 1.8;
             min-height: 100vh;
             position: relative;
             overflow-x: hidden;
@@ -30,13 +30,13 @@
             width: 100%;
             height: 100%;
             background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" opacity="0.1"><path d="M50 10c-10 0-18 8-18 18s8 18 18 18c5 0 9.5-2 12.7-5.3C68 46 75 48 82 48c10 0 18-8 18-18s-8-18-18-18c-7 0-14 2-19.3 7.3C59.5 12 55 10 50 10z" fill="%23d4a373"/><path d="M20 50c-10 0-18 8-18 18s8 18 18 18c5 0 9.5-2 12.7-5.3C38 86 45 88 52 88c10 0 18-8 18-18s-8-18-18-18c-7 0-14 2-19.3 7.3C29.5 52 25 50 20 50z" fill="%23e6e1f5"/></svg>') repeat;
-            opacity: 0.12;
+            opacity: 0.15;
             z-index: -2;
-            animation: leafFloat 30s infinite linear;
+            animation: leafFloat 25s infinite linear;
         }
 
         .hero {
-            background: linear-gradient(135deg, rgba(42, 99, 73, 0.8), rgba(212, 163, 115, 0.6));
+            background: linear-gradient(135deg, rgba(42, 99, 73, 0.85), rgba(212, 163, 115, 0.65));
             height: 600px;
             display: flex;
             justify-content: center;
@@ -53,103 +53,102 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: radial-gradient(circle at center, rgba(230, 225, 245, 0.3), rgba(42, 99, 73, 0.5));
+            background: radial-gradient(circle at center, rgba(230, 225, 245, 0.35), rgba(42, 99, 73, 0.55));
             z-index: -1;
-            animation: gradientPulse 20s infinite ease-in-out;
+            animation: gradientPulse 18s infinite ease-in-out;
         }
 
         .hero-content {
-            max-width: 1000px;
-            padding: 2rem;
-            animation: fadeInUp 1.8s ease-out;
+            max-width: 1100px;
+            padding: 2.5rem;
+            animation: fadeInUp 2s ease-out;
         }
 
         h1 {
             font-family: 'Amiri', serif;
-            font-size: 4.5rem;
+            font-size: 4.8rem;
             color: #f7e7e1;
-            text-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-            margin-bottom: 1rem;
-            letter-spacing: 1px;
+            text-shadow: 0 5px 12px rgba(0, 0, 0, 0.4);
+            margin-bottom: 1.2rem;
+            letter-spacing: 1.5px;
         }
 
         .hero p {
             font-family: 'Amiri', serif;
-            font-size: 2rem;
+            font-size: 2.2rem;
             color: #d4a373;
-            text-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+            text-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);
         }
 
         .container {
-            max-width: 1200px;
-            margin: 4rem auto;
-            padding: 0 2rem;
+            max-width: 1300px;
+            margin: 5rem auto;
+            padding: 0 2.5rem;
         }
 
         .content-section {
-            background: rgba(255, 255, 255, 0.95);
-            border-radius: 20px;
-            padding: 4rem;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2), inset 0 0 10px rgba(212, 163, 115, 0.3);
-            backdrop-filter: blur(12px);
-            animation: fadeIn 2s ease-out;
+            background: rgba(255, 255, 255, 0.97);
+            border-radius: 25px;
+            padding: 4.5rem;
+            box-shadow: 0 12px 50px rgba(0, 0, 0, 0.25), inset 0 0 12px rgba(212, 163, 115, 0.4);
+            backdrop-filter: blur(15px);
+            animation: fadeIn 2.2s ease-out;
         }
 
         h2 {
             font-family: 'Amiri', serif;
-            font-size: 3rem;
+            font-size: 3.2rem;
             color: #2a6349;
-            margin-bottom: 3rem;
+            margin-bottom: 3.5rem;
             text-align: center;
-            text-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            text-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
         }
 
         .articles-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            margin-bottom: 3rem;
+            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+            gap: 2.5rem;
+            margin-bottom: 4rem;
         }
 
         .card {
             background: linear-gradient(145deg, #f7e7e1, #e6e1f5);
-            padding: 2rem;
-            border-radius: 15px;
-            box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1), -5px -5px 15px rgba(255, 255, 255, 0.7);
-            transition: transform 0.4s ease, box-shadow 0.4s ease;
-            overflow: hidden;
+            padding: 2.5rem;
+            border-radius: 20px;
+            border: 1px solid rgba(212, 163, 115, 0.3);
+            box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.15), -6px -6px 20px rgba(255, 255, 255, 0.9);
+            transition: transform 0.5s ease, box-shadow 0.5s ease;
             position: relative;
-            cursor: pointer;
+            aspect-ratio: 1 / 1.2; /* Near-square shape */
         }
 
         .card:hover {
-            transform: translateY(-10px) scale(1.02);
-            box-shadow: 8px 8px 20px rgba(0, 0, 0, 0.15), -8px -8px 20px rgba(255, 255, 255, 0.8);
+            transform: translateY(-12px) scale(1.03);
+            box-shadow: 10px 10px 25px rgba(0, 0, 0, 0.2), -10px -10px 25px rgba(255, 255, 255, 0.95);
         }
 
         .card h4 {
             font-family: 'Amiri', serif;
-            font-size: 1.8rem;
+            font-size: 2rem;
             color: #2a6349;
-            margin-bottom: 1rem;
+            margin-bottom: 1.5rem;
             text-align: center;
+            font-weight: 700;
         }
 
         .card p {
             font-family: 'Inter', sans-serif;
-            font-size: 1.1rem;
+            font-size: 1.15rem;
             color: #34495e;
-            line-height: 1.8;
-            margin-bottom: 1rem;
-            max-height: 200px;
-            overflow-y: auto;
+            line-height: 1.9;
+            margin-bottom: 1.5rem;
         }
 
         .card video {
             max-width: 100%;
-            border-radius: 10px;
-            margin: 1rem 0;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            border-radius: 12px;
+            margin: 1.5rem 0;
+            box-shadow: 0 5px 12px rgba(0, 0, 0, 0.2);
         }
 
         .resource-list {
@@ -159,33 +158,33 @@
         }
 
         .resource-list li {
-            margin-bottom: 1rem;
+            margin-bottom: 1.2rem;
         }
 
         .resource-list a {
             color: #1a535c;
             text-decoration: none;
-            font-size: 1.2rem;
+            font-size: 1.3rem;
             font-family: 'Inter', sans-serif;
             transition: color 0.3s ease, transform 0.3s ease;
         }
 
         .resource-list a:hover {
             color: #d4a373;
-            transform: translateX(5px);
+            transform: translateX(6px);
         }
 
         footer {
             text-align: center;
-            margin: 4rem 0;
-            font-size: 1.1rem;
+            margin: 5rem 0;
+            font-size: 1.2rem;
             color: #5a5a5a;
         }
 
         .visitor-counter {
-            margin-top: 1rem;
+            margin-top: 1.2rem;
             font-family: 'Amiri', serif;
-            font-size: 1.3rem;
+            font-size: 1.4rem;
             color: #2a6349;
         }
 
@@ -196,50 +195,50 @@
         }
 
         @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(50px); }
+            from { opacity: 0; transform: translateY(60px); }
             to { opacity: 1; transform: translateY(0); }
         }
 
         @keyframes fadeInUp {
-            from { opacity: 0; transform: translateY(30px); }
+            from { opacity: 0; transform: translateY(40px); }
             to { opacity: 1; transform: translateY(0); }
         }
 
         @keyframes gradientPulse {
-            0% { background: radial-gradient(circle at center, rgba(230, 225, 245, 0.3), rgba(42, 99, 73, 0.5)); }
-            50% { background: radial-gradient(circle at center, rgba(42, 99, 73, 0.5), rgba(230, 225, 245, 0.3)); }
-            100% { background: radial-gradient(circle at center, rgba(230, 225, 245, 0.3), rgba(42, 99, 73, 0.5)); }
+            0% { background: radial-gradient(circle at center, rgba(230, 225, 245, 0.35), rgba(42, 99, 73, 0.55)); }
+            50% { background: radial-gradient(circle at center, rgba(42, 99, 73, 0.55), rgba(230, 225, 245, 0.35)); }
+            100% { background: radial-gradient(circle at center, rgba(230, 225, 245, 0.35), rgba(42, 99, 73, 0.55)); }
         }
 
         @keyframes leafFloat {
             0% { background-position: 0 0; }
-            100% { background-position: 100px 100px; }
+            100% { background-position: 120px 120px; }
         }
 
         @keyframes pulseCount {
             0% { transform: scale(1); }
-            50% { transform: scale(1.15); }
+            50% { transform: scale(1.12); }
             100% { transform: scale(1); }
         }
 
         @media (max-width: 768px) {
-            .hero { height: 400px; }
-            h1 { font-size: 3rem; }
-            .hero p { font-size: 1.5rem; }
-            .container { padding: 0 1.5rem; }
-            .content-section { padding: 2.5rem; }
-            h2 { font-size: 2.2rem; }
+            .hero { height: 450px; }
+            h1 { font-size: 3.5rem; }
+            .hero p { font-size: 1.8rem; }
+            .container { padding: 0 2rem; }
+            .content-section { padding: 3rem; }
+            h2 { font-size: 2.5rem; }
             .articles-grid { grid-template-columns: 1fr; }
-            .card h4 { font-size: 1.6rem; }
-            .card p { font-size: 1rem; }
-            .visitor-counter { font-size: 1.2rem; }
+            .card h4 { font-size: 1.8rem; }
+            .card p { font-size: 1.1rem; }
+            .visitor-counter { font-size: 1.3rem; }
         }
 
         @media (max-width: 480px) {
-            h1 { font-size: 2.5rem; }
-            .hero p { font-size: 1.3rem; }
-            .content-section { padding: 2rem; }
-            h2 { font-size: 1.8rem; }
+            h1 { font-size: 2.8rem; }
+            .hero p { font-size: 1.5rem; }
+            .content-section { padding: 2.5rem; }
+            h2 { font-size: 2rem; }
         }
     </style>
 </head>
