--- a/article.html
+++ b/article.html
@@ -218,6 +218,15 @@ import { getAnalytics } from "firebase/analytics";
 // Your web app's Firebase configuration
 // For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
+// Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
   apiKey: "AIzaSyD9X2HAbZKO1YOjX0w7NMtR5Zxq1pUCXEg",
   authDomain: "al-noor-b5026.firebaseapp.com",
   projectId: "al-noor-b5026",
@@ -225,6 +234,11 @@ const firebaseConfig = {
   messagingSenderId: "335661830471",
   appId: "1:335661830471:web:c58d02e70a5df1a8897c62",
   measurementId: "G-PSPS9ELS1G"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
 };
 
 // Initialize Firebase
