--- a/add-content.html
+++ b/add-content.html
@@ -128,15 +128,14 @@
         import { getFirestore, collection, addDoc } from 'https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js';
         import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/9.6.0/firebase-auth.js';
 
-        const firebaseConfig = {
-            // Replace with your Firebase config
-            apiKey: "your-api-key",
-            authDomain: "your-project-id.firebaseapp.com",
-            projectId: "your-project-id",
-            storageBucket: "your-project-id.appspot.com",
-            messagingSenderId: "your-messaging-sender-id",
-            appId: "your-app-id"
-        };
+      const firebaseConfig = {
+  apiKey: "AIzaSyC8xFENc723EWYajdQG_EIFW2b7MK_SoCI",
+  authDomain: "test-c6eb1.firebaseapp.com",
+  projectId: "test-c6eb1",
+  storageBucket: "test-c6eb1.firebasestorage.app",
+  messagingSenderId: "277025947734",
+  appId: "1:277025947734:web:82b4b4cdc4ce0b6728fbf7"
+};
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
         const auth = getAuth(app);
